Added uuid and the balance and notification stores. Need to add svelte-on-solana core.

--- a/app/package.json
+++ b/app/package.json
@@ -41,6 +41,8 @@
 		"@solana/spl-token": "^0.3.6",
 		"@solana/wallet-adapter-base": "^0.9.20",
 		"@solana/wallet-adapter-wallets": "^0.19.9",
-		"@solana/web3.js": "^1.70.1"
+		"@solana/web3.js": "^1.70.1",
+		"@svelte-on-solana/wallet-adapter-core": "^1.0.11-alpha.0",
+		"uuid": "^9.0.0"
 	}
 }
