--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     },
     "dependencies": {
         "@project-serum/anchor": "^0.26.0",
-        "@svelte-on-solana/wallet-adapter-core": "^1.0.11-alpha.0"
+        "@svelte-on-solana/wallet-adapter-core": "^1.0.11-alpha.0",
+        "@svelte-on-solana/wallet-adapter-ui": "^1.0.21-alpha.0"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
