--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
         "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
     },
     "dependencies": {
-        "@project-serum/anchor": "^0.26.0",
-        "@svelte-on-solana/wallet-adapter-core": "^1.0.11-alpha.0",
-        "@svelte-on-solana/wallet-adapter-ui": "^1.0.21-alpha.0"
+        "@project-serum/anchor": "^0.26.0"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
