--- a/app/package.json
+++ b/app/package.json
@@ -44,6 +44,7 @@
 		"@solana/web3.js": "^1.70.1",
 		"@svelte-on-solana/wallet-adapter-core": "^1.0.11-alpha.0",
 		"@svelte-on-solana/wallet-adapter-ui": "^1.0.21-alpha.0",
+		"tweetnacl": "^1.0.3",
 		"uuid": "^9.0.0"
 	}
 }
